Fix dropdown being cut by overflow

--- a/website/static/sass/mutation.sass
+++ b/website/static/sass/mutation.sass
@@ -1,6 +1,8 @@
+#content
+  overflow: hidden
+
 .header-panel
   margin-bottom: 10px
-  overflow: hidden
 
   .entry-type
     display: inline-block
